--- a/hw03/Assignment03Part_A.ipynb
+++ b/hw03/Assignment03Part_A.ipynb
@@ -99,7 +99,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -134,13 +134,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uJlMS2_XO2Py"
+        "id": "uJlMS2_XO2Py",
+        "outputId": "230ed946-2074-4196-eecc-9b41f25f7842",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
       },
       "source": [
         "movies= pd.read_csv(io.BytesIO(uploaded['movies_metadata.csv']))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py:2718: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "  interactivity=interactivity, compiler=compiler, result=result)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -189,7 +203,7 @@
         "    N.append(idx)\n",
         "    return N"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -229,7 +243,7 @@
         "        N.append(i)\n",
         "  return N"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -265,13 +279,18 @@
         "            pass\n",
         "            "
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VBEFgKoYOazz"
+        "id": "VBEFgKoYOazz",
+        "outputId": "6bb4f185-2396-4356-a15f-b565484dac1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        }
       },
       "source": [
         "\n",
@@ -286,8 +305,103 @@
         "movies = movies[movies['vote_count'] > 30]\n",
         "movies.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>budget</th>\n",
+              "      <th>popularity</th>\n",
+              "      <th>revenue</th>\n",
+              "      <th>runtime</th>\n",
+              "      <th>vote_average</th>\n",
+              "      <th>vote_count</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>30000000</td>\n",
+              "      <td>21.9469</td>\n",
+              "      <td>373554033.0</td>\n",
+              "      <td>81.0</td>\n",
+              "      <td>7.7</td>\n",
+              "      <td>5415.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>65000000</td>\n",
+              "      <td>17.0155</td>\n",
+              "      <td>262797249.0</td>\n",
+              "      <td>104.0</td>\n",
+              "      <td>6.9</td>\n",
+              "      <td>2413.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0</td>\n",
+              "      <td>11.7129</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>101.0</td>\n",
+              "      <td>6.5</td>\n",
+              "      <td>92.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>16000000</td>\n",
+              "      <td>3.85949</td>\n",
+              "      <td>81452156.0</td>\n",
+              "      <td>127.0</td>\n",
+              "      <td>6.1</td>\n",
+              "      <td>34.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>8.38752</td>\n",
+              "      <td>76578911.0</td>\n",
+              "      <td>106.0</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>173.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     budget popularity      revenue  runtime  vote_average  vote_count\n",
+              "0  30000000    21.9469  373554033.0     81.0           7.7      5415.0\n",
+              "1  65000000    17.0155  262797249.0    104.0           6.9      2413.0\n",
+              "2         0    11.7129          0.0    101.0           6.5        92.0\n",
+              "3  16000000    3.85949   81452156.0    127.0           6.1        34.0\n",
+              "4         0    8.38752   76578911.0    106.0           5.7       173.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -298,24 +412,49 @@
         "scaler = StandardScaler()\n",
         "movies_standardized = scaler.fit_transform(movies.values)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iB5RgufoOa0A"
+        "id": "iB5RgufoOa0A",
+        "outputId": "8e8183f2-df68-4acf-9bac-a32df449e85c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
       },
       "source": [
         "movies.columns"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['budget', 'popularity', 'revenue', 'runtime', 'vote_average',\n",
+              "       'vote_count'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gsw1DIvBOa0b"
+        "id": "Gsw1DIvBOa0b",
+        "outputId": "1c4c5685-52b5-4917-f7e1-cfe0269892dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
       },
       "source": [
         "{'eps': 10.0,\n",
@@ -324,8 +463,25 @@
         " 'num_labels': 2,\n",
         " 'silhouette': 0.9428480074887184}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'distance_metric': 'euclidean',\n",
+              " 'eps': 10.0,\n",
+              " 'min_samples': 4,\n",
+              " 'num_labels': 2,\n",
+              " 'silhouette': 0.9428480074887184}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -333,13 +489,21 @@
         "id": "wnR58jcHxtrv"
       },
       "source": [
-        "### Find Optimal EPS"
+        "### Find Optimal EPS  \n",
+        "calculate all distance and sort in ascending order.  \n",
+        "plot the distances on a graph.  \n",
+        "find the elbow or transition point to be the optimal eps"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vZedRyLWpYSV"
+        "id": "vZedRyLWpYSV",
+        "outputId": "117e2991-310c-413e-d5e2-ec713dea9171",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "#findOptimal EPS\n",
@@ -351,7 +515,15 @@
         "# distdf=pd.DataFrame(np.sort(dist.values, axis=0), index=dist.index, columns=dist.columns)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " 41%|████      | 4970/12178 [05:24<07:47, 15.41it/s]"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -360,17 +532,6 @@
       },
       "source": [
         "dist_sorted = np.sort(dist, axis=None)  "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nYcT9F412PHf"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -455,6 +616,7 @@
         }
       },
       "source": [
+        "#Sanity Check\n",
         "dbscan = DBSCAN()\n",
         "labels = dbscan.fit(movies_standardized, 5,1,'euclidean')"
       ],
@@ -532,78 +694,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aLEkDcdA90nC",
-        "outputId": "27520181-f1d6-4bc4-d3b9-cccf8f60158d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 311
-        }
+        "id": "aLEkDcdA90nC"
       },
       "source": [
-        "euclid,manh = Distance_matrix(movies_standardized, 'euclidean')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-3293f14953ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0meuclid\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmanh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDistance_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovies_standardized\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'euclidean'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-15-06bbe98ad1a3>\u001b[0m in \u001b[0;36mDistance_matrix\u001b[0;34m(X, distance_metric)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mdistance_metric\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;34m'euclidean'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0meuclid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meuclidean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mdistance_metric\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;34m'manhattan'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mmanhat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmanhattan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-16-ee3f5c97c5bf>\u001b[0m in \u001b[0;36meuclidean\u001b[0;34m(list_A, list_B)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0meuclidean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist_A\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_B\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mdiff_vect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist_A\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlist_B\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiff_vect\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdiff_vect\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "URL6Vu19_Yzm"
-      },
-      "source": [
-        "euclid"
+        "test_euclid,test_manh = Distance_matrix(movies_standardized, 'euclidean')"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "65tnLGX_lD7C",
-        "outputId": "3f85a85f-8910-4819-aef4-63017ca3b054",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 139
-        }
-      },
-      "source": [
-        "manh"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       ...,\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 84
-        }
-      ]
     },
     {
       "cell_type": "code",
